# agent_slm_server

./: .gitignore  CONTRIBUTING.md  README.md  USAGE_GUIDE.md  chat_test.py  chat_test.py.bak  comprehensive_test.py  constraints.txt  direct_api_test.py  embedding_test.py  pyproject.toml  requirements.txt  test_client_run.py
docs/: OPTIMIZATION_REPORT.md  QUALITY_CHECK_GUIDE.md  README.md  USAGE_GUIDE.md  index.md  memory-optimization-guide.md  optimization_summary.md  quality_report.md
scripts/: start_llama_cpp.ps1  start_llama_cpp.sh  start_optimized.ps1  start_optimized.sh  start_server.py
src/agent_slm_server/: __init__.py  chat_backends.py  memory_monitor.py  performance_config.py  qwenchat.py  slm_server.py  slm_server_simple.py  start_server.py
tests/: direct_api_test.py  embedding_test.py  test_llamacpp_backend.py  test_perf_backends.py
